; ModuleID = '/home/carl/AnghaBench/vlc/modules/text_renderer/freetype/fonts/extr_android.c_Android_GetFallbacks.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/text_renderer/freetype/fonts/extr_android.c_Android_GetFallbacks.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_5__* }
%struct.TYPE_5__ = type { i32 }

@kVLCDictionaryNotFound = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @Android_GetFallbacks(%struct.TYPE_4__* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_4__*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca %struct.TYPE_5__*, align 8
  %10 = alloca i8*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %11 = load i32, i32* %7, align 4
  %12 = call i32 @VLC_UNUSED(i32 %11)
  store i32* null, i32** %8, align 8
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 0
  %15 = load %struct.TYPE_5__*, %struct.TYPE_5__** %14, align 8
  store %struct.TYPE_5__* %15, %struct.TYPE_5__** %9, align 8
  %16 = load i8*, i8** %6, align 8
  %17 = call i8* @ToLower(i8* %16)
  store i8* %17, i8** %10, align 8
  %18 = load i8*, i8** %10, align 8
  %19 = icmp ne i8* %18, null
  %20 = xor i1 %19, true
  %21 = zext i1 %20 to i32
  %22 = call i64 @unlikely(i32 %21)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %25

24:                                               ; preds = %3
  store i32* null, i32** %4, align 8
  br label %38

25:                                               ; preds = %3
  %26 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %27 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %26, i32 0, i32 0
  %28 = load i8*, i8** %10, align 8
  %29 = call i32* @vlc_dictionary_value_for_key(i32* %27, i8* %28)
  store i32* %29, i32** %8, align 8
  %30 = load i8*, i8** %10, align 8
  %31 = call i32 @free(i8* %30)
  %32 = load i32*, i32** %8, align 8
  %33 = load i32*, i32** @kVLCDictionaryNotFound, align 8
  %34 = icmp eq i32* %32, %33
  br i1 %34, label %35, label %36

35:                                               ; preds = %25
  store i32* null, i32** %4, align 8
  br label %38

36:                                               ; preds = %25
  %37 = load i32*, i32** %8, align 8
  store i32* %37, i32** %4, align 8
  br label %38

38:                                               ; preds = %36, %35, %24
  %39 = load i32*, i32** %4, align 8
  ret i32* %39
}

declare dso_local i32 @VLC_UNUSED(i32) #1

declare dso_local i8* @ToLower(i8*) #1

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32* @vlc_dictionary_value_for_key(i32*, i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
